--- a/RNDR.Services.Models/System.BLL.Models.csproj
+++ b/RNDR.Services.Models/System.BLL.Models.csproj
@@ -11,7 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\RNDR.DAL\RNDR.DAL.csproj" />
+    <ProjectReference Include="..\RNDR.DAL\System.DAL.csproj" />
   </ItemGroup>
 
 </Project>
