--- a/RNDR.Services/System.BLL.csproj
+++ b/RNDR.Services/System.BLL.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -10,8 +10,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\RNDR.DAL\RNDR.DAL.csproj" />
-    <ProjectReference Include="..\RNDR.Services.Models\RNDR.Services.Models.csproj" />
+    <ProjectReference Include="..\RNDR.DAL\System.DAL.csproj" />
+    <ProjectReference Include="..\RNDR.Services.Models\System.BLL.Models.csproj" />
   </ItemGroup>
 
 </Project>
