--- a/RNDR/appsettings.json
+++ b/RNDR/appsettings.json
@@ -11,6 +11,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=RNDR_DB;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=it_club_system;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
