--- a/BlazorClient/BlazorClient.csproj
+++ b/BlazorClient/BlazorClient.csproj
@@ -5,7 +5,8 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="AntDesign" Version="0.6.0" />
+        <PackageReference Include="Blazorise.AntDesign" Version="0.9.3" />
+        <PackageReference Include="Blazorise.Icons.FontAwesome" Version="0.9.3" />
         <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="5.0.3" />
         <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="5.0.3" PrivateAssets="all" />
         <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Authentication" Version="5.0.3" />
