--- a/BlazorClient/BlazorClient.csproj
+++ b/BlazorClient/BlazorClient.csproj
@@ -6,6 +6,7 @@
 
     <ItemGroup>
         <PackageReference Include="Blazorise.AntDesign" Version="0.9.3" />
+        <PackageReference Include="Blazorise.DataGrid" Version="0.9.3" />
         <PackageReference Include="Blazorise.Icons.FontAwesome" Version="0.9.3" />
         <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="5.0.3" />
         <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="5.0.3" PrivateAssets="all" />
