--- a/BlazorClient/BlazorClient.csproj
+++ b/BlazorClient/BlazorClient.csproj
@@ -5,18 +5,22 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Blazorise.AntDesign" Version="0.9.3.3" />
-        <PackageReference Include="Blazorise.DataGrid" Version="0.9.3.3" />
-        <PackageReference Include="Blazorise.Icons.FontAwesome" Version="0.9.3.3" />
-        <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="5.0.4" />
-        <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="5.0.4" PrivateAssets="all" />
-        <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Authentication" Version="5.0.4" />
+        <PackageReference Include="Blazorise.AntDesign" Version="0.9.3.6" />
+        <PackageReference Include="Blazorise.DataGrid" Version="0.9.3.6" />
+        <PackageReference Include="Blazorise.Icons.FontAwesome" Version="0.9.3.6" />
+        <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="5.0.5" />
+        <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="5.0.5" PrivateAssets="all" />
+        <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Authentication" Version="5.0.5" />
         <PackageReference Include="System.Net.Http.Json" Version="5.0.0" />
     </ItemGroup>
 
     <ItemGroup>
       <ProjectReference Include="..\BLL.Models\System.BLL.Models.csproj" />
       <ProjectReference Include="..\BLL\System.BLL.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="wwwroot\Images" />
     </ItemGroup>
 
 </Project>
