--- a/BlazorClient/BlazorClient.csproj
+++ b/BlazorClient/BlazorClient.csproj
@@ -5,9 +5,10 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Blazorise.AntDesign" Version="0.9.3.3" />
-        <PackageReference Include="Blazorise.DataGrid" Version="0.9.3.3" />
-        <PackageReference Include="Blazorise.Icons.FontAwesome" Version="0.9.3.3" />
+        <PackageReference Include="Blazorise.AntDesign" Version="0.9.3.6" />
+        <PackageReference Include="Blazorise.DataGrid" Version="0.9.3.6" />
+        <PackageReference Include="Blazorise.Icons.FontAwesome" Version="0.9.3.6" />
+        <PackageReference Include="Blazorise.Sidebar" Version="0.9.3.6" />
         <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="5.0.4" />
         <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="5.0.4" PrivateAssets="all" />
         <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Authentication" Version="5.0.4" />
