add upload option(not sure security, need to test and improve)

--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -9,6 +9,12 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "ImgurSettings": {
+    "clientId": "29a307bda5953e5",
+    "clientSecret": "6651ab341e382cb8b77b19a4a1f9a3dff6647d7c",
+    "refreshToken": "",
+    "accessToken": ""
+  },
   "AllowedHosts": "*",
   "ConnectionStrings": {
 
