--- a/API/System.API.csproj
+++ b/API/System.API.csproj
@@ -16,6 +16,7 @@
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="5.0.5" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.5" />
+    <PackageReference Include="RestSharp" Version="106.11.7" />
     <PackageReference Include="Serilog" Version="2.10.0" />
     <PackageReference Include="Serilog.AspNetCore" Version="4.1.0" />
     <PackageReference Include="Serilog.Extensions.Logging.File" Version="2.0.0" />
@@ -30,6 +31,10 @@
     <ProjectReference Include="..\DAL\System.DAL.csproj" />
     <ProjectReference Include="..\BLL.Models\System.BLL.Models.csproj" />
     <ProjectReference Include="..\BLL\System.BLL.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="wwwroot\Images" />
   </ItemGroup>
 
 </Project>
