--- a/BlazorClient/BlazorClient.csproj
+++ b/BlazorClient/BlazorClient.csproj
@@ -8,6 +8,7 @@
         <PackageReference Include="Blazorise.AntDesign" Version="0.9.3.6" />
         <PackageReference Include="Blazorise.DataGrid" Version="0.9.3.6" />
         <PackageReference Include="Blazorise.Icons.FontAwesome" Version="0.9.3.6" />
+        <PackageReference Include="Blazorise.Sidebar" Version="0.9.3.6" />
         <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="5.0.5" />
         <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="5.0.5" PrivateAssets="all" />
         <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Authentication" Version="5.0.5" />
